fix z-index navbar

--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -1,5 +1,5 @@
 nav {
-    z-index: 5;
+    z-index: 100;
     position: fixed;
     width: 100%;
     height: 60px;
